--- a/practice/240701_1/0701_practice/package.json
+++ b/practice/240701_1/0701_practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "context",
+  "name": "0701_practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,8 +12,8 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
