--- a/practice/kakao_api/back/package.json
+++ b/practice/kakao_api/back/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mysql2": "^3.10.2",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
